fixed li height not allowing proper wrapping

--- a/app/assets/stylesheets/main.css.less
+++ b/app/assets/stylesheets/main.css.less
@@ -235,7 +235,6 @@ header {
             margin-right:10px;
           }
           line-height:24px;
-          height:24px;
           padding:0;
 
           span {
